--- a/src/Components/USA/USA.module.css
+++ b/src/Components/USA/USA.module.css
@@ -74,8 +74,7 @@
 
 .usa button {
   box-shadow: 0px 8px 8px 0px #00000040;
-  /* background-color: #fdc010; */
-  background-color: #0a549506;
+  background-color: #fdc010;
   border: none;
   border-radius: 0.6rem;
   padding: 0.7rem 1.5rem;
